<resources>

    <string name="app_name"> Xiaobai Music</string>
    <string name="notifyTitle">prompt</string>
    <string name="notifyMsg">The current application lacks necessary permissions. \n\nPlease click \"Settings\"-\"Permissions\"-to open the required permissions. </string>
    <string name="setting">Settings</string>
    <string name="carry">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="lock">>>> Slide to unlock</string>

    <!-- tabbar -->
    <string name="tab1">Home page</string>
    <string name="tab2">Cloud Search</string>
    <string name="tab3">share</string>
    <string name="tab4">user</string>


    <!-- start_page -->
    <string name="over">skip</string>

    <!-- home -->
    <string name="search">Search results</string>
    <string name="item1">ranking list</string>
    <string name="item2">Recommended album</string>
    <string name="item3">Popular singers</string>
    <string name="item3s">singer</string>
    <string name="item4">Just listen to it </string>
    <string name="songs">song</string>
    <string name="more">More</string>
    <string name="artist">singer </string>

    <!-- search -->
    <string name="history">History search</string>
    <string name="delhistory">Everyone is searching</string>
    <string name="sear1">Line One</string>
    <string name="sear2">Line two</string>
    <string name="sear">line selection</string>

    <!--login-->
    <string name="login">Welcome back</string>
    <string name="register">create an account</string>
    <string name="unknown">Don’t have an account yet?</string>
    <string name="Username">please enter the e-mail address</string>
    <string name="Password">Please enter the password</string>
    <string name="old_Password">please enter the old password</string>
    <string name="new_Password">please enter a new password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="repeat_password">please enter the password again</string>
    <string name="repeat_code">Please enter the invitation code (optional) </string>
    <string name="protocol">User Agreement</string>
    <string name="protocols">Privacy Policy</string>
    <string name="register_publish">registration</string>
    <string name="regis_publish">Submit</string>
    <string name="error_protocol">Please check the user agreement!</string>
    <string name="error_name">Mailbox cannot be empty!</string>
    <string name="error_pass">The password cannot be empty! </string>
    <string name="error_passs">The two password entries are not the same, please re-enter</string>
    <string name="error_login">The account or password is wrong, please re-enter!</string>
    <string name="error_register">registration failed, please try again!</string>
    <string name="error_captcha">The verification code cannot be empty</string>
    <string name="succes_login">successful landing</string>
    <string name="error_captchas">please check the user agreement</string>
    <string name="succes_register">successful registration</string>
    <string name="captcha">Get the verification code</string>
    <string name="captchas">Please enter the verification code</string>
    <string name="succes_code">The verification code is sent successfully, please log in to the mailbox to check, if not found, please pay attention to check the spam</string>
    <string name="go">login</string>
    <string name="goset">show the playlist after logging in</string>
    <string name="ungoset">Not logged in account, whether to log in</string>
    <string name="ungo">not logged in</string>
    <string name="delgo">log out</string>
    <string name="tip_name_number_error">invalid mailbox, please re-enter!</string>\
    <string name="tip_verify_code_error">please enter the 4-digit verification code</string>

    <!--play-->
    <string name="love">Favorites</string>
    <string name="equalizer">Equalizer</string>
    <string name="error_connection">The network connection is abnormal, please try again later!</string>
    <string name="error_search"> search failed, please try again later</string>
    <string name="error_searcher">Search songs can’t be collected temporarily</string>
    <string name="secret_num">~~ Loading ~~</string>
    <string name="error_playing_track">playback error</string>
    <string name="error_playing_tracks">playback failure</string>
    <string name="error_playing_trackt">something went wrong</string>
    <string name="lyric_default_hint">No lyrics at the moment</string>
    <string name="folders">No data</string>
    <string name="play_time">00:00</string>
    <string name="play_no_resource">no music playback</string>
    <string name="play_mode">the song already exists</string>
    <string name="play_mode_random">random play</string>
    <string name="play_mode_repeat">single play</string>
    <string name="play_mode_loop">sequence play</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="secret_erro">failed to load</string>
    <string name="title_d">prompt</string>
    <string name="title_dash">Avatar uploading, please wait</string>
    <string name="title_dashboard">The avatar was uploaded successfully</string>
    <string name="title_notifications">The picture resolution is too high to load</string>


    <!--list-->
    <string name="delete">delete</string>
    <string name="list_dow">close</string>
    <string name="album">album</string>
    <string name="codelist_txt">invitees</string>

    <!--song-->
    <string name="song">My playlist</string>
    <string name="song_add">add</string>
    <string name="song_deter">OK</string>
    <string name="song_cancel">cancel</string>
    <string name="song_create">create a playlist</string>
    <string name="song_but">select playlist</string>
    <string name="song_name">playlist name</string>
    <string name="song_error_name">please enter the playlist name</string>
    <string name="song_all">select all</string>
    <string name="song_unall">do not select all</string>
    <string name="song_collect">Collection to the playlist</string>
    <string name="song_collectsucc">has been favorited</string>
    <string name="song_addsong">add music</string>
    <string name="song_addsonglist">whether to add music to this playlist</string>
    <string name="song_cancel_coll">Cancel the collection</string>
    <string name="song_cancel_colls">whether to cancel the collection</string>
    <string name="song_cancel_success">collection success</string>
    <string name="song_collect_error">No song has been selected yet, please select</string>
    <string name="song_download">download </string>
    <string name="song_downloads">download management</string>

    <string name="song_download_error">Songs have not been downloaded yet, please download first</string>
    <string name="song_carry">complete</string>
    <string name="song_edit">edit playlist</string>
    <string name="song_alls">multiple selection</string>
    <string name="song_del">delete the playlist</string>
    <string name="song_list">play list</string>
    <string name="song_dellist">Are you sure you want to empty the playlist</string>
    <string name="song_delsong">delete music</string>
    <string name="song_delsongsucc">deleted successfully</string>
    <string name="song_delsongs">whether to delete music</string>
    <string name="dan">single loop</string>
    <string name="lie">list loop</string>
    <string name="sui">random play</string>

    <!--user-->
    <string name="updown">edit</string>
    <string name="user_updown">edit data</string>
    <string name="user_name">nickname</string>
    <string name="user_gra">gender</string>
    <string name="user_gras">gender selection</string>
    <string name="man">Male</string>
    <string name="girl">Female</string>
    <string name="user_city">Country</string>
    <string name="user_sear">Country selection</string>
    <string name="user_mess">Introduction information</string>
    <string name="attention">download times</string>
    <string name="collect">Collection</string>
    <string name="like">local</string>
    <string name="user_save">save</string>
    <string name="error_user">data cannot be empty</string>


    <!--download-->
    <string name="download">Start downloading in the background</string>
    <string name="download_error">download failed, please download again</string>
    <string name="download_carry">the song has been downloaded</string>
    <string name="download_succe">Song:</string>
    <string name="download_song">download music</string>
    <string name="download_playsong">whether to download music</string>
    <string name="download_success">successfully downloaded</string>
    <string name="download_num">The number of downloads today has been used up</string>


    <!--set-->
    <string name="set">set</string>
    <string name="set1">modify password </string>
    <string name="set1_captcha">please enter the password</string>
    <string name="set2">Clean up the cache</string>
    <string name="set3">Edit personal information</string>
    <string name="set4">Your invitation code is</string>
    <string name="set4s">Successfully invite one, get 10 plays</string>
    <string name="set4_un">Click to share after logging in, you can get more download times, come and try it</string>
    <string name="set4_suss">has been successfully invited</string>
    <string name="set4_set">people</string>
    <string name="set2_un">whether to clean up the cache</string>
    <string name="set2_sess">cleared the cache successfully</string>
    <string name="main_set">press again to exit</string>
    <string name="code_captchas">invitation code has been activated</string>
    <string name="code_copy">copy the invitation link</string>
    <string name="code_copysuss">copied successfully</string>
    <string name="code_list">invitation list</string>
    <string name="code_lists">No invitation for the time being</string>
    <string name="code_baoc">save the QR code</string>
    <string name="code_baocs">has been saved to the system photo album</string>
    <string name="code_captch">It is detected that there is copy content on the clipboard, whether to fill in the invitation code</string>
    <string name="code_captcha">Please enter the invitation code</string>


</resources>