<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/register_flot"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:src="@drawable/flot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_flot"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_28" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/re_username_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_40"
            android:layout_toEndOf="@+id/textView2"
            android:drawableStart="@drawable/ic_repeat"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/Username"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_20"
            app:met_primaryColor="@color/white"
            app:met_textColor="@color/white"
            app:met_textColorHint="@color/gray" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/re_pass_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re_username_number"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignEnd="@+id/re_username_number"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@+id/textView2"
            android:drawableStart="@drawable/ic_repeat"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_20"
            app:met_primaryColor="@color/white"
            app:met_textColor="@color/white"
            app:met_textColorHint="@color/gray" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/re_passs_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re_pass_number"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignEnd="@+id/re_pass_number"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@+id/textView2"
            android:drawableStart="@drawable/ic_repeat"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_20"
            app:met_primaryColor="@color/white"
            app:met_textColor="@color/white"
            app:met_textColorHint="@color/gray" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re_passs_number"
            android:layout_alignStart="@+id/re_passs_number"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/protocol"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

    </RelativeLayout>

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:text="@string/register_publish"
        app:rb_isRadiusAdjustBounds="true"
        android:textColor="@color/white_pressed"
        app:rb_backgroundColor="@color/app_blue"
        app:rb_borderColor="@color/app_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />



</androidx.constraintlayout.widget.ConstraintLayout>