<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <ImageView
            android:id="@+id/login_flot"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:src="@drawable/flot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_flot"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_28" />

        <EditText
            android:id="@+id/et_username_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_40"
            android:layout_toEndOf="@+id/textView2"
            android:drawableStart="@drawable/emil"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/Username"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et_passs_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username_number"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignEnd="@+id/et_username_number"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@+id/textView2"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            tools:ignore="TextFields" />
    </RelativeLayout>

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:text="@string/go"
        app:rb_isRadiusAdjustBounds="true"
        android:textColor="@color/white_pressed"
        app:rb_backgroundColor="@color/app_blue"
        app:rb_borderColor="@color/app_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/unknown"
        android:padding="@dimen/dp_10"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>