<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/include"
        layout="@layout/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.xuexiang.xui.widget.imageview.RadiusImageView
        android:id="@+id/ima"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_40"
        android:scaleType="centerCrop"
        android:src="@drawable/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:riv_corner_radius="@dimen/dp_10"
        app:riv_is_circle="false" />

    <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ima" />

    <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/user_gra"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender"
        android:layout_alignEnd="@+id/gender"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/user_city"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@+id/gender"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginEnd="@dimen/dp_40"
        android:text="@string/user_save"
        android:textColor="@color/white_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:rb_backgroundColor="@color/app_blue"
        app:rb_borderColor="@color/app_blue"
        app:rb_isRadiusAdjustBounds="true" />

</androidx.constraintlayout.widget.ConstraintLayout>