<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">


        <EditText
            android:id="@+id/re_pass_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/old_Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_18"
            android:theme="@style/MyEditText"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/re_passs_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re_pass_number"
            android:layout_alignStart="@+id/re_pass_number"
            android:layout_alignEnd="@+id/re_pass_number"
            android:layout_marginTop="@dimen/dp_20"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/new_Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/sp_18"
            android:theme="@style/MyEditText"
            tools:ignore="TextFields" />


    </RelativeLayout>



    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:text="@string/regis_publish"
        app:rb_isRadiusAdjustBounds="true"
        android:textColor="@color/white_pressed"
        app:rb_backgroundColor="@color/colorAccentDarkTheme"
        app:rb_borderColor="@color/colorAccentDarkTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />




</androidx.constraintlayout.widget.ConstraintLayout>